# xorg-rgb

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  autogen.sh  configure.ac  rgb.c  rgb.man  rgb.txt  showrgb.c  showrgb.man
